# data-product-forecasting

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  pyproject.toml  reporte_poc.md
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: __init__.py  main.py
app/components/: __init__.py  db_helpers.py  test_db_helpers.py
app/pages/: batch_export.py  business_feedback.py  forecast_exploration.py  model_evaluation.py
backend/: __init__.py
data/: rds.py
db/: __main__.py  init_db.py  load_all.py  load_catalogs.py  load_metrics.py  load_predictions.py  schema.py  test_loaders.py  test_smoke.py
docs/: arquitectura.drawio  arquitectura.md  erd.md
docs/api/: config.html  data.html  etl.html  index.html  logging.html  rds.html  search.js
docs/api/data/: rds.html
docs/api/etl/: bronze.html  gold.html
docs/html/: utils.html
docs/html/etl/: etl.html  features.html  silver.html
docs/html/utils/: logging.html
etl/: Dockerfile  __init__.py  __main__.py  bronze.py  etl.py  features.py  gold.py  silver.py
etl/test/: test_prep.py
evaluation/: __init__.py  __main__.py  evaluate.py  test_evaluate.py
frontend/: app.py
inference/: __init__.py  __main__.py  predict.py  test_predict.py
infra/: core.yaml
scripts/: check_rds.py
tests/: __init__.py  test_features.py  test_rds.py
training/: __init__.py  __main__.py  test_train.py  train.py
utils/: logging.py
