[project]
name = "data-product-forecasting"
version = "0.1.0"
description = "Production-grade demand forecasting data product in AWS"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "ipykernel>=6.29.0"
]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "D"]

ignore = ["D100"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"v