[tool.hatch.build.targets.wheel]
packages = ["etl", "utils", "app", "services", "config", "data"]
[project]
name = "data-product-forecasting"
version = "0.1.0"
description = "Production-grade demand forecasting data product in AWS"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "black>=26.1.0",
    "boto3>=1.42.44",
    "jupyterlab>=4.5.3",
    "kaggle>=1.8.4",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.0",
    "ruff>=0.15.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "joblib>=1.4.2",
    "kagglehub>=0.4.3",
    "pyyaml>=6.0.3",
]


[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "D"]

[project.optional-dependencies]
dev = [
    "pylint>=3.2.7",
    "ruff>=0.6.9",
    "pytest>=8.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"