[tool.hatch.build.targets.wheel]
packages = ["etl", "utils", "app", "services", "config", "data"]
[project]
name = "data-product-forecasting"
version = "0.1.0"
description = "Production-grade demand forecasting data product in AWS"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.33.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "boto3>=1.34.0",
    "kaggle>=1.6.0",
    "lightgbm>=4.3.0",
    "matplotlib>=3.8.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "joblib>=1.3.0",
    "kagglehub>=0.2.0",
    "pyyaml>=6.0.0",
    "awswrangler>=3.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3.3",
    "jupyterlab>=4.0.0",
    "pre-commit>=3.0.0",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP", "D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["etl/test"]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"